fixed alignment and stuff

--- a/style.css
+++ b/style.css
@@ -18,7 +18,12 @@ body {
 }
 
 /* indie flower font */
-h1 { font-family: "Indie Flower"; font-size: 32px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; text-align: center; } h3 { font-family: "Indie Flower"; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } p { font-family: "Indie Flower"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } blockquote { font-family: "Indie Flower"; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } pre { font-family: "Indie Flower"; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+h1 { font-family: "Indie Flower"; font-size: 32px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; text-align: center;
+position: relative; top: -130%;} 
+ h3 { font-family: "Indie Flower"; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; margin-bottom: 0%; padding-bottom: 0%;} 
+ p { font-family: "Indie Flower"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
+ blockquote { font-family: "Indie Flower"; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
+ pre { font-family: "Indie Flower"; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
 
 input{
     border-radius:25px ;
@@ -105,11 +110,17 @@ input{
     top:5%;
     text-align: center;
 }
-.btn-primary{
+#btn-primary{
     border-radius: 25px;
-    background-color: rgb(32, 32, 147);
+    background-color: #0C539B;
     font-family: "Indie Flower";
     font-size:larger;
+    color: #ffffff;
+    transition: transform 0.3s;
+}
+#btn-primary:hover{
+    background-color: #073461;
+    transition: transform 0.3s;
 }
 a{
     color: black;
@@ -167,7 +178,18 @@ i {
     font-size: 50px;
     color: gray;
 }
-
+.col-10{
+    padding-bottom: 10px;
+}
+/* .row{
+    margin-left: 6%;
+} */
+input[type="text"]{
+    width: 80%;
+}
+input[type="password"]{
+    width: 80%;
+}
 /* Paper stack order */
 #p1 {
     z-index: 4;
